# llm-async

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/source/: conf.py  contributing.rst  development.rst  index.rst  installation.rst  models.rst  quickstart.rst
docs/source/providers/: base.rst  claude.rst  google.rst  index.rst  openai.rst  openai_responses.rst  openrouter.rst
docs/source/usage/: advanced.rst  basic.rst  index.rst  responses_api.rst  streaming.rst  structured.rst  tools.rst  xai_responses.rst
examples/: openai_http2.py  openai_responses_examples.py  openai_responses_repl_http2_prompt_cache.py  openai_responses_tool_call.py  openai_responses_tool_call_with_previous_id.py  openrouter_reasoning_fallback.py  provider_request.py  stream_all_providers.py  structured_outputs_all_providers.py  tool_call_all_providers.py  xai_responses.py
llm_async/models/: __init__.py  message.py  response.py  response_schema.py  tool_call.py
llm_async/providers/: __init__.py  base.py  claude.py  google.py  openai.py  openai_responses.py  openrouter.py
llm_async/pubsub/: __init__.py  local.py
llm_async/utils/: __init__.py  http.py  retry.py
llmpy/: __init__.py
llmpy/models/: event.py
llmpy/providers/: __init__.py  claude.py  google.py  openai.py  openrouter.py
llmpy/pubsub/: base.py  local.py  pubsub.py
llmpy/utils/: __init__.py  retry.py
tests/: conftest.py  test_response.py
tests/test_models/: test_message.py  test_response_schema.py
tests/test_providers/: test_auto_tool_execution.py  test_base.py  test_claude.py  test_google.py  test_google_tools.py  test_message_cleaning.py  test_openai.py  test_openrouter.py  test_streaming_edge_cases.py  test_tool_execution_format.py
tests/test_pubsub/: test_local_backend.py  test_tool_execution.py
tests/test_utils/: test_http.py
