[tool.poetry]
name = "llm_async"
version = "0.2.0"
description = "Multi-LLM Provider Library"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sonic182/aiosonic"
authors = [
    "Johanderson Mogollon <johander1822@gmail.com>",
]
packages = [{include = "llm_async"}]

[tool.poetry.dependencies]
python = "^3.9"
aiosonic = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.21"
pytest-mock = "*"
pytest-cov = "*"
black = "*"
ruff = "*"
pytest-black = "*"
pytest-ruff = "*"
pytest-sugar = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["llm_async"]
