[tool.poetry]
name = "llm_async"
version = "0.4.0"
description = "Multi-LLM Provider Library"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sonic182/llm-async"
homepage = "https://github.com/sonic182/llm-async"
documentation = "https://github.com/sonic182/llm-async#readme"
keywords = ["llm", "asyncio", "ai", "openai", "anthropic", "claude", "gemini", "google", "openrouter", "streaming", "tool calling", "json schema", "structured outputs", "python", "aiosonic"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

authors = [
    "Johanderson Mogollon <johander1822@gmail.com>",
]
packages = [{include = "llm_async"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sonic182/llm-async/issues"
"Source" = "https://github.com/sonic182/llm-async"
"Changelog" = "https://github.com/sonic182/llm-async/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiosonic = ">=0.31.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.21"
pytest-mock = "*"
pytest-cov = "*"
black = "*"
ruff = "*"
pytest-black = "*"
pytest-ruff = "*"
pytest-sugar = "*"

[tool.poetry.group.docs.dependencies]
sphinx = {version = "^9.1.0", python = ">=3.12,<3.15"}
sphinx-rtd-theme = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["llm_async"]
